# CpuMonitor

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cpu_monitor.yml  macos.yml  tauri.yml  ubuntu.yml  windows.yml
app/: CMakeLists.txt  main.cpp  main_cli.cpp
app/test/: test_thread.cpp
cmake/: flatbuffer_cfg.cmake
common/: CMakeLists.txt  Common.cpp  Common.h  RpcMsg.h
common/schema/: CpuMsg.fbs  ProcessMsg.fbs  ProgressMsg.fbs
common/schema_gen/: CpuMsg_generated.h  ProcessMsg_generated.h  ProgressMsg_generated.h
common/test/: CMakeLists.txt  main.cpp
daemon/: CMakeLists.txt  main.cpp  version.h
daemon/test/: TimeTracker.hpp  test_thread.cpp
daemon/utils/: file_utils.h  time_utils.h
gui/: App.cpp  App.h  CMakeLists.txt  Types.h  imconfig.h  main.cpp
gui/ui/: Home.cpp  Home.h  uidef.h
lib/: CMakeLists.txt  CpuInfoNative.h  CpuMonitor.h  CpuMonitorCore.h  CpuTick.h  MemMonitor.h  TaskMonitor.h  Types.h  Utils.h
lib/apple/: CpuMonitor.cpp  CpuMonitorCore.cpp  MemMonitor.cpp  TaskMonitor.cpp  Utils.cpp
lib/detail/: defer.h  log.h  noncopyable.hpp
lib/linux/: CpuMonitor.cpp  CpuMonitorCore.cpp  CpuStat.h  MemMonitor.cpp  TaskMonitor.cpp  TaskStat.h  Utils.cpp
lib/tests/: test_CpuMonitor.cpp  test_MemMonitor.cpp  test_TaskMonitor.cpp  test_Utils.cpp
src/: CMakeLists.txt  CpuMonitor.cpp  CpuMonitor.h  CpuMonitorAll.cpp  CpuMonitorAll.h  CpuStat.h  MemMonitor.cpp  MemMonitor.h  TaskMonitor.cpp  TaskMonitor.h  TaskStat.h  Utils.cpp  Utils.h
src/detail/: log.h  noncopyable.hpp
test/: test_thread.cpp
ui/: App.cpp  App.h  AppHelper.h  CMakeLists.txt  imconfig.h  main.cpp
ui-tauri/cpu_monitor/: index.html  package-lock.json  package.json
ui-tauri/cpu_monitor/src/: App.css  App.vue  main.ts
ui-tauri/cpu_monitor/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ui-tauri/cpu_monitor/src-tauri/src/: main.rs  msg.rs  msg_data.rs  rpc_task.rs  utils.rs
ui-tauri/cpu_monitor/src/components/: Greet.vue
ui/base/: file_utils.h
ui/ui/: Home.cpp  Home.h  MsgData.hpp  uidef.h
