[package]
name = "cpu_monitor"
version = "1.3.0"
description = "CpuMonitor"
authors = ["liushuai"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.10.0"
rpc-core = { path = "../../../thirdparty/asio_net/include/asio_net/rpc_core/rust/src/core" }
rpc-core-net = { path = "../../../thirdparty/asio_net/include/asio_net/rpc_core/rust/src/net" }
tokio = { version = "1", features = ["rt", "net", "io-util"] }
tokio-stream = "0.1"
dirs = "5.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
