[package]
name = "cpu_monitor"
version = "1.3.1"
description = "CpuMonitor"
authors = ["liushuai"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.10.0"
rpc-core = { path = "thirdparty/rpc_core/rust", features = ["net"] }
tokio = { version = "1", features = ["rt"] }
dirs = "5.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
